src/test/deca/context/valid/created/instanceof/null.deca
class X{

    int x;
    
    void m(int x){

    }

    void t() {
        m(x);
        //this.x = x;
    }
}